@@ -1,3 +1,7 @@
+4/22/2005
+	- Attempting to get the name/type/class/ttl of an empty RRset
+	  throws an exception.
+
 4/21/2005
 	- Remove RRset.getSecurity()/.setSecurity().
 
